# aria2-gtk4-ui

./: README.md  app.c  app.gresource.xml  aria2.c  aria2.conf  aria2.h  aria2_entity.c  aria2_entity.h  b64.c  b64.h  base64.c  base64.h  hashmap.h  menuwindow.c  menuwindow.h  menuwindow.ui  meson.build  read.txt  socketobject.c  socketobject.h  tray_ico_helper.c  utilities.c  utilities.h  uuid4.c  uuid4.h  websocketclient.c  websocketclient.h
